--- a/notebooks/wiktor.ipynb
+++ b/notebooks/wiktor.ipynb
@@ -13,9 +13,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('..')\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from utils.eda import show_image_with_keypoints, get_image_and_keypoints_from_raw_observation\n",
+    "from preprocessor.preprocessor import Preprocessor"
    ]
   },
   {
@@ -38,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +82,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are a lot of missing values in the data, especially in more sophisticated features. We can impute them using other models, or just ignore the value of loss function for them. Since all the missing values appear in target variables, for now we will not impute them, and rather just omit calculating loss for these observations."
+    "There are a lot of missing values in the data, especially in more sophisticated features. We can impute them using other models, or just ignore the value of loss function for them. Since all the missing values appear in target variables, for now we will not impute them, and rather just omit calculating loss for these observations. Hence, no actions will be taken as of now."
    ]
   },
   {
@@ -112,251 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>left_eye_center_x</th>\n",
-       "      <th>left_eye_center_y</th>\n",
-       "      <th>right_eye_center_x</th>\n",
-       "      <th>right_eye_center_y</th>\n",
-       "      <th>left_eye_inner_corner_x</th>\n",
-       "      <th>left_eye_inner_corner_y</th>\n",
-       "      <th>left_eye_outer_corner_x</th>\n",
-       "      <th>left_eye_outer_corner_y</th>\n",
-       "      <th>right_eye_inner_corner_x</th>\n",
-       "      <th>right_eye_inner_corner_y</th>\n",
-       "      <th>...</th>\n",
-       "      <th>nose_tip_y</th>\n",
-       "      <th>mouth_left_corner_x</th>\n",
-       "      <th>mouth_left_corner_y</th>\n",
-       "      <th>mouth_right_corner_x</th>\n",
-       "      <th>mouth_right_corner_y</th>\n",
-       "      <th>mouth_center_top_lip_x</th>\n",
-       "      <th>mouth_center_top_lip_y</th>\n",
-       "      <th>mouth_center_bottom_lip_x</th>\n",
-       "      <th>mouth_center_bottom_lip_y</th>\n",
-       "      <th>Image</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1906</th>\n",
-       "      <td>63.749207</td>\n",
-       "      <td>36.221939</td>\n",
-       "      <td>28.384546</td>\n",
-       "      <td>39.022015</td>\n",
-       "      <td>56.949211</td>\n",
-       "      <td>37.972917</td>\n",
-       "      <td>70.765705</td>\n",
-       "      <td>36.239131</td>\n",
-       "      <td>35.453863</td>\n",
-       "      <td>39.606916</td>\n",
-       "      <td>...</td>\n",
-       "      <td>57.014921</td>\n",
-       "      <td>64.760120</td>\n",
-       "      <td>72.939445</td>\n",
-       "      <td>34.426676</td>\n",
-       "      <td>74.638118</td>\n",
-       "      <td>50.297134</td>\n",
-       "      <td>73.254912</td>\n",
-       "      <td>50.564068</td>\n",
-       "      <td>73.934382</td>\n",
-       "      <td>5 10 20 29 39 48 61 73 94 112 120 123 127 124 ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1907</th>\n",
-       "      <td>22.763345</td>\n",
-       "      <td>55.617202</td>\n",
-       "      <td>1.528527</td>\n",
-       "      <td>56.404973</td>\n",
-       "      <td>19.064954</td>\n",
-       "      <td>56.291237</td>\n",
-       "      <td>27.571879</td>\n",
-       "      <td>56.384378</td>\n",
-       "      <td>5.751046</td>\n",
-       "      <td>56.743904</td>\n",
-       "      <td>...</td>\n",
-       "      <td>60.069687</td>\n",
-       "      <td>22.923362</td>\n",
-       "      <td>73.483945</td>\n",
-       "      <td>2.245766</td>\n",
-       "      <td>74.128316</td>\n",
-       "      <td>12.605173</td>\n",
-       "      <td>71.888816</td>\n",
-       "      <td>12.536477</td>\n",
-       "      <td>76.628863</td>\n",
-       "      <td>5 10 20 29 39 48 61 73 94 112 120 123 127 124 ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2294</th>\n",
-       "      <td>68.147669</td>\n",
-       "      <td>36.542446</td>\n",
-       "      <td>32.530286</td>\n",
-       "      <td>40.170137</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>67.213029</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>54.296469</td>\n",
-       "      <td>79.085486</td>\n",
-       "      <td>137 136 135 134 132 128 123 121 121 128 106 70...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2297</th>\n",
-       "      <td>69.275782</td>\n",
-       "      <td>35.639229</td>\n",
-       "      <td>28.891200</td>\n",
-       "      <td>38.888567</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>64.883287</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>51.172364</td>\n",
-       "      <td>74.631302</td>\n",
-       "      <td>56 57 57 56 54 51 50 53 55 56 55 54 55 65 75 8...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2298</th>\n",
-       "      <td>63.366646</td>\n",
-       "      <td>41.137231</td>\n",
-       "      <td>34.119385</td>\n",
-       "      <td>38.170092</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>58.939815</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>46.835692</td>\n",
-       "      <td>70.808123</td>\n",
-       "      <td>13 13 11 10 9 8 7 8 8 8 9 9 11 12 15 18 20 24 ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 31 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      left_eye_center_x  left_eye_center_y  right_eye_center_x  \\\n",
-       "1906          63.749207          36.221939           28.384546   \n",
-       "1907          22.763345          55.617202            1.528527   \n",
-       "2294          68.147669          36.542446           32.530286   \n",
-       "2297          69.275782          35.639229           28.891200   \n",
-       "2298          63.366646          41.137231           34.119385   \n",
-       "\n",
-       "      right_eye_center_y  left_eye_inner_corner_x  left_eye_inner_corner_y  \\\n",
-       "1906           39.022015                56.949211                37.972917   \n",
-       "1907           56.404973                19.064954                56.291237   \n",
-       "2294           40.170137                      NaN                      NaN   \n",
-       "2297           38.888567                      NaN                      NaN   \n",
-       "2298           38.170092                      NaN                      NaN   \n",
-       "\n",
-       "      left_eye_outer_corner_x  left_eye_outer_corner_y  \\\n",
-       "1906                70.765705                36.239131   \n",
-       "1907                27.571879                56.384378   \n",
-       "2294                      NaN                      NaN   \n",
-       "2297                      NaN                      NaN   \n",
-       "2298                      NaN                      NaN   \n",
-       "\n",
-       "      right_eye_inner_corner_x  right_eye_inner_corner_y  ...  nose_tip_y  \\\n",
-       "1906                 35.453863                 39.606916  ...   57.014921   \n",
-       "1907                  5.751046                 56.743904  ...   60.069687   \n",
-       "2294                       NaN                       NaN  ...   67.213029   \n",
-       "2297                       NaN                       NaN  ...   64.883287   \n",
-       "2298                       NaN                       NaN  ...   58.939815   \n",
-       "\n",
-       "      mouth_left_corner_x  mouth_left_corner_y  mouth_right_corner_x  \\\n",
-       "1906            64.760120            72.939445             34.426676   \n",
-       "1907            22.923362            73.483945              2.245766   \n",
-       "2294                  NaN                  NaN                   NaN   \n",
-       "2297                  NaN                  NaN                   NaN   \n",
-       "2298                  NaN                  NaN                   NaN   \n",
-       "\n",
-       "      mouth_right_corner_y  mouth_center_top_lip_x  mouth_center_top_lip_y  \\\n",
-       "1906             74.638118               50.297134               73.254912   \n",
-       "1907             74.128316               12.605173               71.888816   \n",
-       "2294                   NaN                     NaN                     NaN   \n",
-       "2297                   NaN                     NaN                     NaN   \n",
-       "2298                   NaN                     NaN                     NaN   \n",
-       "\n",
-       "      mouth_center_bottom_lip_x  mouth_center_bottom_lip_y  \\\n",
-       "1906                  50.564068                  73.934382   \n",
-       "1907                  12.536477                  76.628863   \n",
-       "2294                  54.296469                  79.085486   \n",
-       "2297                  51.172364                  74.631302   \n",
-       "2298                  46.835692                  70.808123   \n",
-       "\n",
-       "                                                  Image  \n",
-       "1906  5 10 20 29 39 48 61 73 94 112 120 123 127 124 ...  \n",
-       "1907  5 10 20 29 39 48 61 73 94 112 120 123 127 124 ...  \n",
-       "2294  137 136 135 134 132 128 123 121 121 128 106 70...  \n",
-       "2297  56 57 57 56 54 51 50 53 55 56 55 54 55 65 75 8...  \n",
-       "2298  13 13 11 10 9 8 7 8 8 8 9 9 11 12 15 18 20 24 ...  \n",
-       "\n",
-       "[5 rows x 31 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_train[df_train.duplicated(subset=\"Image\", keep=False)].head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +166,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -557,11 +317,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_train = transform_duplicates_to_mean_value(df_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6494, 31)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.shape"
    ]
   },
   {
