--- a/notebooks/krzysztof.ipynb
+++ b/notebooks/krzysztof.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "47ad3ca8",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "f825ba71",
    "metadata": {},
    "outputs": [],
@@ -25,9 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "d1705905",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -259,209 +261,19 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#df_train\n",
     "df_train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "b2ca167f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ImageId</th>\n",
-       "      <th>Image</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>182 183 182 182 180 180 176 169 156 137 124 10...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>76 87 81 72 65 59 64 76 69 42 31 38 49 58 58 4...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>177 176 174 170 169 169 168 166 166 166 161 14...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>176 174 174 175 174 174 176 176 175 171 165 15...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>50 47 44 101 144 149 120 58 48 42 35 35 37 39 ...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   ImageId                                              Image\n",
-       "0        1  182 183 182 182 180 180 176 169 156 137 124 10...\n",
-       "1        2  76 87 81 72 65 59 64 76 69 42 31 38 49 58 58 4...\n",
-       "2        3  177 176 174 170 169 169 168 166 166 166 161 14...\n",
-       "3        4  176 174 174 175 174 174 176 176 175 171 165 15...\n",
-       "4        5  50 47 44 101 144 149 120 58 48 42 35 35 37 39 ..."
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_test.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "1bb623f1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RowId</th>\n",
-       "      <th>ImageId</th>\n",
-       "      <th>FeatureName</th>\n",
-       "      <th>Location</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>left_eye_center_x</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>left_eye_center_y</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>right_eye_center_x</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>right_eye_center_y</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>left_eye_inner_corner_x</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   RowId  ImageId              FeatureName  Location\n",
-       "0      1        1        left_eye_center_x       NaN\n",
-       "1      2        1        left_eye_center_y       NaN\n",
-       "2      3        1       right_eye_center_x       NaN\n",
-       "3      4        1       right_eye_center_y       NaN\n",
-       "4      5        1  left_eye_inner_corner_x       NaN"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_id_table.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "37e10e53",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1783, 2)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "f70f17b0",
    "metadata": {},
    "outputs": [
@@ -471,7 +283,7 @@
        "(7049, 31)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,28 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "71bf1b8d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(27124, 4)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_id_table.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "bf4d7d52",
    "metadata": {},
    "outputs": [
@@ -557,62 +348,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "b249291c",
+   "cell_type": "markdown",
+   "id": "6d576456",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1783 entries, 0 to 1782\n",
-      "Data columns (total 2 columns):\n",
-      " #   Column   Non-Null Count  Dtype \n",
-      "---  ------   --------------  ----- \n",
-      " 0   ImageId  1783 non-null   int64 \n",
-      " 1   Image    1783 non-null   object\n",
-      "dtypes: int64(1), object(1)\n",
-      "memory usage: 28.0+ KB\n"
-     ]
-    }
-   ],
    "source": [
-    "df_test.info()"
+    "Columns and their types in df_train:\n",
+    "\n",
+    "-left(right)_eye_center_x(y) - x(y) coordinate of location of center of left(right) eye on image - float,\n",
+    "\n",
+    "-left(right)_eye_inner_corner_x(y) - x(y) coordinate of location of inner corner of left(right) eye - float,\n",
+    "\n",
+    "-left(right)_eye_outer_corner_x(y) - x(y) coordinate of location of outer corner of left(right) eye - float,\n",
+    "\n",
+    "-left(right)_eyebrow_inner_end_x(y) - x(y) coordinate of location of inner end of left(right) eyebrow - float,\n",
+    "\n",
+    "-left(right)_eyebrow_outer_end_x(y) - x(y) coordinate of location of outer end of left(right) eyebrow - float,\n",
+    "\n",
+    "-nose_tip_x(y) - x(y) coordinate of tip of nose - float,\n",
+    "\n",
+    "-mouth_left(right)_corner_x(y) - x(y) coordinate of location of left(right) corner of mouth - float,\n",
+    "\n",
+    "-mouth_center_top(bottom)_lip_x(y) - x(y) coordinate of top(bottom) center of mouth - float,\n",
+    "\n",
+    "-Image - matrix representing image - matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "81341ef5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 27124 entries, 0 to 27123\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   RowId        27124 non-null  int64  \n",
-      " 1   ImageId      27124 non-null  int64  \n",
-      " 2   FeatureName  27124 non-null  object \n",
-      " 3   Location     0 non-null      float64\n",
-      "dtypes: float64(1), int64(2), object(1)\n",
-      "memory usage: 847.8+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_id_table.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "59cf991f",
    "metadata": {},
    "outputs": [
@@ -1710,7 +1473,7 @@
        "[30 rows x 30 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1718,6 +1481,272 @@
    "source": [
     "df=df_train.corr()\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b2ca167f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ImageId</th>\n",
+       "      <th>Image</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>182 183 182 182 180 180 176 169 156 137 124 10...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>76 87 81 72 65 59 64 76 69 42 31 38 49 58 58 4...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>177 176 174 170 169 169 168 166 166 166 161 14...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>176 174 174 175 174 174 176 176 175 171 165 15...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>50 47 44 101 144 149 120 58 48 42 35 35 37 39 ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ImageId                                              Image\n",
+       "0        1  182 183 182 182 180 180 176 169 156 137 124 10...\n",
+       "1        2  76 87 81 72 65 59 64 76 69 42 31 38 49 58 58 4...\n",
+       "2        3  177 176 174 170 169 169 168 166 166 166 161 14...\n",
+       "3        4  176 174 174 175 174 174 176 176 175 171 165 15...\n",
+       "4        5  50 47 44 101 144 149 120 58 48 42 35 35 37 39 ..."
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "37e10e53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1783, 2)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b249291c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1783 entries, 0 to 1782\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column   Non-Null Count  Dtype \n",
+      "---  ------   --------------  ----- \n",
+      " 0   ImageId  1783 non-null   int64 \n",
+      " 1   Image    1783 non-null   object\n",
+      "dtypes: int64(1), object(1)\n",
+      "memory usage: 28.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_test.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "1bb623f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RowId</th>\n",
+       "      <th>ImageId</th>\n",
+       "      <th>FeatureName</th>\n",
+       "      <th>Location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>left_eye_center_x</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>left_eye_center_y</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>right_eye_center_x</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>right_eye_center_y</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>left_eye_inner_corner_x</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   RowId  ImageId              FeatureName  Location\n",
+       "0      1        1        left_eye_center_x       NaN\n",
+       "1      2        1        left_eye_center_y       NaN\n",
+       "2      3        1       right_eye_center_x       NaN\n",
+       "3      4        1       right_eye_center_y       NaN\n",
+       "4      5        1  left_eye_inner_corner_x       NaN"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_id_table.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "71bf1b8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(27124, 4)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_id_table.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "81341ef5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 27124 entries, 0 to 27123\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   RowId        27124 non-null  int64  \n",
+      " 1   ImageId      27124 non-null  int64  \n",
+      " 2   FeatureName  27124 non-null  object \n",
+      " 3   Location     0 non-null      float64\n",
+      "dtypes: float64(1), int64(2), object(1)\n",
+      "memory usage: 847.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_id_table.info()"
    ]
   },
   {
