--- a/notebooks/pipeline.ipynb
+++ b/notebooks/pipeline.ipynb
@@ -370,7 +370,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -397,12 +396,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#TODO Krzysiu wrzuć tutaj swoje opisy kolumn i jakie są typy danych"
+    "Columns and their types in df_train:\n",
+    "\n",
+    "-left(right)_eye_center_x(y) - x(y) coordinate of location of center of left(right) eye on image - float,\n",
+    "\n",
+    "-left(right)_eye_inner_corner_x(y) - x(y) coordinate of location of inner corner of left(right) eye - float,\n",
+    "\n",
+    "-left(right)_eye_outer_corner_x(y) - x(y) coordinate of location of outer corner of left(right) eye - float,\n",
+    "\n",
+    "-left(right)_eyebrow_inner_end_x(y) - x(y) coordinate of location of inner end of left(right) eyebrow - float,\n",
+    "\n",
+    "-left(right)_eyebrow_outer_end_x(y) - x(y) coordinate of location of outer end of left(right) eyebrow - float,\n",
+    "\n",
+    "-nose_tip_x(y) - x(y) coordinate of tip of nose - float,\n",
+    "\n",
+    "-mouth_left(right)_corner_x(y) - x(y) coordinate of location of left(right) corner of mouth - float,\n",
+    "\n",
+    "-mouth_center_top(bottom)_lip_x(y) - x(y) coordinate of top(bottom) center of mouth - float,\n",
+    "\n",
+    "-Image - matrix representing image - matrix"
    ]
   },
   {
@@ -499,7 +514,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -730,7 +744,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "wb",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -744,9 +758,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.13"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
