--- a/notebooks/krzysztof.ipynb
+++ b/notebooks/krzysztof.ipynb
@@ -2717,7 +2717,7 @@
     "\n",
     "    scheduler.step()\n",
     "\n",
-    "    avg_train_loss = train_loss / val_steps\n",
+    "    avg_train_loss = train_loss / train_steps\n",
     "    avg_val_loss = val_loss / val_steps\n",
     "\n",
     "    logger[\"train\"].append(avg_train_loss.cpu().detach().numpy())\n",
